# idle-deck-builder

./: .gitignore  CHECKLIST.md  DESIGN.md  DOCUMENT-INDEX.md  ROADMAP.md  TECH-STACK.md
.archive/: CHECKLIST-completed-sessions.md  DESIGN-v1.9-pre-split.md  README.md
.cursor/: mcp.json
.cursor/commands/: log.md
.cursor/log/: README.md  log-template.md  mcp-agent-utils-setup.md
.cursor/log/administrative/: data-ownership-model.md  design-sync-2025-11-07.md  documentation-restructure-v2.0.md  logging-system-reorganization.md  preliminary-tech-stack-planning.md  rule-enhancement-2025-11-07.md  (+2 more)
.cursor/rules/: 01-background-assessment.mdc  02-work-tracking.mdc  03-decision-validation.mdc  04-task-focus.mdc  05-realistic-partner.mdc
docs/: economy-model.md  theme-specification.md  visual-style-guide.md
docs/design-specs/: baseline-numbers.md  card-data-structure.md  card-system.md  combat-system.md  conditional-mechanics.md  first-30-minutes.md  progression.md  resource-economy.md  tier-class-system.md
game-data/: README.md  balance-config.json  cards-pack1.json  cards-pack2.json  cards-schema.json  cards-starter-deck.json
simulator/: .gitignore  QUICKSTART.md  README.md  pyproject.toml
simulator/data/: .gitkeep
simulator/simulator/: __init__.py  cli.py
simulator/simulator/analysis/: __init__.py  balance.py  validation.py  visualization.py
simulator/simulator/core/: __init__.py  cards.py  combat.py  deck.py  economy.py
simulator/simulator/visualization/: __init__.py  display.py  event_player.py  live_viewer.py
simulator/tests/: __init__.py  test_cards.py  test_combat.py  test_deck.py  test_economy.py
(+45 files in other folders)
